--- a/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
@@ -81,7 +81,6 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="200.00"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_35sdp" />
 
@@ -96,7 +95,7 @@
                     android:text="CYN"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="gone"></TextView>
+                    android:visibility="gone"/>
             </LinearLayout>
 
             <TextView
@@ -106,7 +105,6 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
-                android:text="[Gift card name] gift card sent to {first name + last \nname} at {email address}. "
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
@@ -141,7 +139,6 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_semibold"
                         android:gravity="right"
-                        android:text="SND34239274DANN"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_11ssp" />
 
