--- a/app/src/main/res/layout/activity_accounts.xml
+++ b/app/src/main/res/layout/activity_accounts.xml
@@ -103,8 +103,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp"
-                            tools:text="19.999" />
+                            android:textSize="@dimen/_12ssp" />
 
                         <TextView
                             android:layout_width="wrap_content"
