--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -111,7 +111,6 @@
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_semibold"
                             android:singleLine="true"
-                            android:text="••••5359"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -160,9 +159,8 @@
                         android:layout_toLeftOf="@+id/imgArrow"
                         android:layout_toRightOf="@+id/imgBankIcon"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="Your [daily or weekly] limit is [amount]"
                         android:textColor="@color/xdark_gray"
-                        android:textSize="@dimen/_9ssp"></TextView>
+                        android:textSize="@dimen/_9ssp" />
 
                     <TextView
                         android:id="@+id/tvFeePer"
@@ -177,7 +175,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text=""
                         android:textColor="@color/xdark_gray"
-                        android:textSize="@dimen/_9ssp"></TextView>
+                        android:textSize="@dimen/_9ssp"/>
 
                     <ImageView
                         android:id="@+id/imgArrow"
@@ -268,7 +266,7 @@
                                     android:text=" CYN"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_12ssp"
-                                    android:visibility="gone"></TextView>
+                                    android:visibility="gone"/>
 
                             </LinearLayout>
 
@@ -304,7 +302,7 @@
                         android:text="Amount entered exceeds your daily limit"
                         android:textColor="@color/error"
                         android:textSize="@dimen/_10ssp"
-                        android:visibility="invisible"></TextView>
+                        android:visibility="invisible"/>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -326,7 +324,7 @@
             android:fontFamily="@font/opensans_regular"
             android:text="Exchange Rate: 1.00 CYN = $ 1.00"
             android:textColor="@color/xdark_gray"
-            android:textSize="@dimen/_9ssp"></TextView>
+            android:textSize="@dimen/_9ssp"/>
 
         <com.coyni.mapp.utils.keyboards.CustomKeyboard
             android:id="@+id/ckb"
