--- a/app/src/main/res/layout/activity_pay_to_personal.xml
+++ b/app/src/main/res/layout/activity_pay_to_personal.xml
@@ -84,7 +84,6 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:gravity="center"
                         android:maxLength="2"
-                        android:text="AA"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_14ssp"
@@ -99,7 +98,7 @@
                     android:layout_marginTop="@dimen/_11sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_13ssp"></TextView>
+                    android:textSize="@dimen/_13ssp"/>
 
                 <TextView
                     android:id="@+id/tvWAddress"
@@ -109,7 +108,7 @@
                     android:layout_marginTop="@dimen/_3sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:textColor="@color/dark_grey"
-                    android:textSize="@dimen/_11ssp"></TextView>
+                    android:textSize="@dimen/_11ssp"/>
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
@@ -309,7 +308,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="Paying Method"
                             android:textColor="@color/xdark_gray"
-                            android:textSize="@dimen/_11ssp"></TextView>
+                            android:textSize="@dimen/_11ssp"/>
 
                         <TextView
                             android:id="@+id/tvBalHead"
@@ -319,7 +318,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:text="coyni Balance"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_11ssp"></TextView>
+                            android:textSize="@dimen/_11ssp"/>
 
                         <TextView
                             android:id="@+id/tvBalance"
@@ -328,9 +327,8 @@
                             android:layout_below="@+id/tvBalHead"
                             android:layout_alignParentRight="true"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="Available: 9,999,00CYN"
                             android:textColor="@color/xdark_gray"
-                            android:textSize="@dimen/_9ssp"></TextView>
+                            android:textSize="@dimen/_9ssp"/>
                     </RelativeLayout>
                 </LinearLayout>
 
