--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -113,7 +113,6 @@
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_semibold"
                             android:singleLine="true"
-                            android:text="••••5359"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -147,7 +146,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="••••5359"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -162,7 +160,6 @@
                         android:layout_toLeftOf="@+id/imgArrow"
                         android:layout_toRightOf="@+id/imgBankIcon"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="Your [daily or weekly] limit is [amount]"
                         android:textColor="@color/xdark_gray"
                         android:textSize="@dimen/_9ssp" />
 
@@ -179,7 +176,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text=""
                         android:textColor="@color/xdark_gray"
-                        android:textSize="@dimen/_9ssp"></TextView>
+                        android:textSize="@dimen/_9ssp"/>
 
                     <ImageView
                         android:id="@+id/imgArrow"
@@ -271,7 +268,7 @@
                                     android:text=" CYN"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_12ssp"
-                                    android:visibility="visible"></TextView>
+                                    android:visibility="visible"/>
 
                             </LinearLayout>
 
@@ -299,7 +296,7 @@
                         android:text="Amount entered exceeds your daily limit"
                         android:textColor="@color/error"
                         android:textSize="@dimen/_10ssp"
-                        android:visibility="gone"></TextView>
+                        android:visibility="gone"/>
 
                     <LinearLayout
                         android:id="@+id/lyBalance"
@@ -315,16 +312,15 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="Available Balance: "
                             android:textColor="@color/balance"
-                            android:textSize="@dimen/_9ssp"></TextView>
+                            android:textSize="@dimen/_9ssp"/>
 
                         <TextView
                             android:id="@+id/tvAvailableBal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="9,999.00"
                             android:textColor="@color/balance"
-                            android:textSize="@dimen/_12ssp"></TextView>
+                            android:textSize="@dimen/_12ssp"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -332,7 +328,7 @@
                             android:fontFamily="@font/opensans_bold"
                             android:text=" CYN"
                             android:textColor="@color/balance"
-                            android:textSize="@dimen/_9ssp"></TextView>
+                            android:textSize="@dimen/_9ssp"/>
 
                     </LinearLayout>
 
@@ -371,7 +367,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="Exchange Rate: 1.00 CYN = $ 1.00"
                 android:textColor="@color/xdark_gray"
-                android:textSize="@dimen/_9ssp"></TextView>
+                android:textSize="@dimen/_9ssp"/>
 
         </LinearLayout>
     </ScrollView>
