--- a/app/src/main/res/layout/banklistitem.xml
+++ b/app/src/main/res/layout/banklistitem.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_select_bank"></ImageView>
+                android:src="@drawable/ic_select_bank"/>
 
             <LinearLayout
                 android:id="@+id/layoutBank"
@@ -58,7 +58,7 @@
                     android:singleLine="true"
                     android:text="Bank of America"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp"></TextView>
+                    android:textSize="@dimen/_12ssp"/>
 
                 <TextView
                     android:id="@+id/tvAccount"
@@ -66,9 +66,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1.2"
                     android:fontFamily="@font/opensans_semibold"
-                    android:text="••••5359"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp"></TextView>
+                    android:textSize="@dimen/_11ssp"/>
 
             </LinearLayout>
 
@@ -78,7 +77,7 @@
                 android:layout_height="1dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="1dp"
-                android:background="@color/viewcolor"></View>
+                android:background="@color/viewcolor"/>
         </RelativeLayout>
 
     </com.coyni.mapp.utils.swipelayout.SwipeLayout>
