--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -105,12 +105,12 @@
                                 android:maxLength="12"
                                 android:maxLines="1"
                                 android:padding="@dimen/_14sdp"
+                                android:singleLine="true"
                                 android:textColor="@color/text_color"
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
                                 android:textIsSelectable="false"
-                                android:textSize="@dimen/_12ssp"
-                                android:singleLine="true"/>
+                                android:textSize="@dimen/_12ssp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
