--- a/app/src/main/res/layout/selectedpaymentmethodlist_item.xml
+++ b/app/src/main/res/layout/selectedpaymentmethodlist_item.xml
@@ -54,6 +54,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/mainRL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white">
@@ -63,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_select_bank"/>
+                android:src="@drawable/ic_select_bank" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -90,7 +91,7 @@
                         android:singleLine="true"
                         android:text="Bank of America"
                         android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_12ssp"/>
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/tvAccount"
@@ -99,7 +100,7 @@
                         android:layout_weight="1.2"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_11ssp"/>
+                        android:textSize="@dimen/_11ssp" />
 
                     <ImageView
                         android:id="@+id/imgBankTick"
@@ -190,7 +191,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="There’s a issue with your payment"
                         android:textColor="@color/error_red"
-                        android:textSize="@dimen/_10ssp"/>
+                        android:textSize="@dimen/_10ssp" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -200,7 +201,7 @@
                 android:layout_height="1dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="1dp"
-                android:background="@color/viewcolor"/>
+                android:background="@color/viewcolor" />
         </RelativeLayout>
 
     </com.coyni.mapp.utils.swipelayout.SwipeLayout>
